Fix flicker on tx payloads

--- a/app/App/Panel/Main/Signer/Requests/style/index.styl
+++ b/app/App/Panel/Main/Signer/Requests/style/index.styl
@@ -267,11 +267,13 @@
       pointer-events none
 
   .requestNotice
+    height 100%
+    transform translateZ(0px)
     .requestNoticeInner
       position absolute
-      top 50px
+      top 0px
       right 0
-      bottom 50px
+      bottom 0px
       left 0
       display flex
       justify-content center
